# quran-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  ask.py  netlify.toml  pyproject.toml  render.yaml
.github/workflows/: docker.yml  keepalive.yml
data/: quran_sample.jsonl
scripts/: audit_alignment.py  build_embeddings.py  build_tafseer_db.py  hubeali_build_corpus.py  hubeali_parser.py  hubeali_urls.txt  merge_arabic.py
src/groundedrag/: __init__.py  answer.py  corpus.py  providers.py  query_understanding.py  ratelimit.py  retriever.py  tafseer_store.py
tests/: test_quran_rag.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  surahs.ts  vite-env.d.ts
