[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quran-rag"
version = "1.0.0"
description = "A grounded RAG that answers questions only from the Quran, with verse citations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smafnan", email = "smafnan5@gmail.com" }]
dependencies = ["scikit-learn>=1.3", "numpy>=1.24"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
